--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
         #full-name {
             text-transform: capitalize;
         }
+        h1{
+            font-size: 40px;
+        }
 
     </style>
 </head>
